--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="messages"></div>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
     <script src="anime.js"></script>
 </body>
 </html>
