--- a/index.html
+++ b/index.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <title>noobwale</title>
+    <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Girassol&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="nav.css">
+    <title>essayhank</title>
 </head>
 <body>
+    <nav class="nav-bar">
+        <span class="navbar-toogle" id="jsBar">
+            <i class="fa fa-bars" aria-hidden="true"></i>
+        </span>
+        <a href="#" class="logo">noobwale</a>
+        <ul class="main-bar" id="jsMenu">
+            <li>
+                <a href="#" class="nav-links">home</a>
+            </li>
+            <li>
+                <a href="#" class="nav-links">services</a>
+            </li>
+            <li>
+                <a href="#" class="nav-links">contact me</a>
+            </li>
+        </ul>
+    </nav>
     <div class="messages"></div>
+
     <script src="./script.js"></script>
-    <script src="anime.js"></script>
+    <script src="./nav.js"></script>
+    <script src="./anime.js"></script>
 </body>
 </html>
