--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Girassol&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="nav.css">
     <title>essayhank</title>
 </head>
 <body>
@@ -29,9 +29,33 @@
         </ul>
     </nav>
     <div class="messages"></div>
-    
-    <script src="./nav.js"></script>
+    <footer id="">
+        <ul class="main-footer">
+            <li>
+                <a href="" class="footer-links">
+                    <i class="fa fa-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a href="" class="footer-links">
+                    <i class="fa fa-envelope"></i>
+                </a>
+            </li>
+            <li>
+                <a href="" class="footer-links">
+                    <i class="fa fa-whatsapp"></i>
+                </a>
+            </li>
+            <li>
+                <a href="" class="footer-links">
+                    <i class="fa fa-paypal"></i>
+                </a>
+            </li>
+        </ul>
+    </footer>
+
     <script src="./script.js"></script>
+    <script src="./nav.js"></script>
     <script src="./anime.js"></script>
 </body>
 </html>
