--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span class="navbar-toogle" id="jsBar">
             <i class="fa fa-bars" aria-hidden="true"></i>
         </span>
-        <a href="#" class="logo">noobwale</a>
+        <a href="#" class="logo">essayhank</a>
         <ul class="main-bar" id="jsMenu">
             <li>
                 <a href="#" class="nav-links">home</a>
