--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <footer id="">
         <ul class="main-footer">
             <li>
-                <a href="" class="footer-links">
+                <a href="https://twitter.com/essay_hank" class="footer-links">
                     <i class="fa fa-twitter"></i>
                 </a>
             </li>
@@ -42,7 +42,7 @@
                 </a>
             </li>
             <li>
-                <a href="" class="footer-links">
+                <a href="wa.me/17475006196" class="footer-links">
                     <i class="fa fa-whatsapp"></i>
                 </a>
             </li>
