--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </a>
             </li>
             <li>
-                <a href="wa.me/17475006196" class="footer-links">
+                <a href="https://wa.me/17475006196" class="footer-links">
                     <i class="fa fa-whatsapp"></i>
                 </a>
             </li>
